Fix `pre` element wrapping on the width `1024px`
The element was breaking when it was inside the `ol` `ul` list.

--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -90,7 +90,7 @@
 // Usage: `@include list();`
 @mixin list($item-line-height: 1.6) {
   ol, ul {
-    margin: 0 0 32px 6px;
+    margin: 0 0 32px 0;
     line-height: $item-line-height;
 
     @media (max-width: $tablet) {
